# parser

./: .gitlab-ci.yml  Cargo.toml  README.md
docs/content/: language-spec.md  parser.md
src/: error.rs  lib.rs  types.rs
src/parsers/: key_parser.rs  keypair_parser.rs  mod.rs  multi_parser.rs  o_data_parser.rs  o_datatype_parser.rs  o_key_parser.rs  o_keypair_parser.rs  o_main_parser.rs  owml_parser.rs
tests/: dt_match.rs  test_parser.rs
