[package]
name = "owml-parser"
description = "A lightweight parser for a lightweight markup language."
keywords = ["parser", "no-std", "markup"]
version = "0.1.2"
license = "MIT"
readme = "README.md"
homepage = "https://owml.gitlab.io/owml-website/"
repository = "https://gitlab.com/scOwez/owml-parser"
authors = ["scOwez <owez@scalist.net>"]
edition = "2018"

[badges]
gitlab = { repository = "scOwez/owml-parser", branch = "master" }
maintenance = { status = "abandoned" }

[dependencies]
nom = "5.0.0"
